# Nuummite

./: .gitignore  CMakeLists.txt  CMakePresets.json  Nuummite.spec  README.md  pyproject.toml  setup.py
Nuummite/: CMakeLists.txt
Nuummite/audio/: aec_processor.cpp  aec_processor.h  audio_engine.cpp  audio_engine.h  jitter_buffer.cpp  jitter_buffer.h  lock_free_mixing.h  portaudio_dyn.h  rnnoise_processor.cpp  rnnoise_processor.h  webrtc_apm.cpp  webrtc_apm.h
Nuummite/client/: MainWindow.cpp  MainWindow.h  ParticipantRowWidget.cpp  ParticipantRowWidget.h  SettingsDialog.cpp  SettingsDialog.h  VolumeControlPanel.cpp  VolumeControlPanel.h  main.cpp  resources.qrc
Nuummite/common/: audio_packet.cpp  audio_packet.h  libsodium_wrapper.cpp  libsodium_wrapper.h  opus_codec.cpp  opus_codec.h  socket_utils.cpp  socket_utils.h  winsock_init.cpp  winsock_init.h
Nuummite/launcher/: main.cpp
Nuummite/p2p/: peer_discovery.cpp  peer_discovery.h  rtp_transport.cpp  rtp_transport.h
Nuummite/ui/: Popup_message.ui  available_clients.ui  dark.qss  light.qss  main_window.cpp  main_window.h  main_window.ui  participant_item.ui  settings_dialog.ui  volume_control.ui  volume_control_panel.cpp
Nuummite/ui/components/: participant_row.cpp
python/: STRESS_TESTING.md  __init__.py  audio_wrapper.cpp  audio_wrapper.pyx  main.py  rx_plc_stress_test.py  test_audio_wrapper.py  udp_client_stress.py
python/ui/: main_window_ui.py  participant_item_ui.py  popup_message_ui.py  settings_dialog_ui.py  volume_control_ui.py  volume_control_widget.py
scripts/: build_voice.ps1  copy_required_dlls.py
vcpkg-offline/: README.txt
